--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="container">
         <button class="btn" id="btn">Click me please</button>
     </div>
-    <script src="dist/generic.js"></script>
+    <hr>
+    <div id="card"></div>
+    <script src="dist/namespaces.js" defer></script>
 </body>
 </html>
